configurationengine/source/scripts/tests/testdata/validate/project/assets/invalid/implml/invalid_attribute.implml
<?xml version="1.0" encoding="UTF-8"?>
<container xmlns="http://www.symbianfoundation.org/xml/implml/1">
    <!-- This is caught by schema validation -->
    <container foo="bar"/>
</container>